--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JMSP61D9F1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JMSP61D9F1');
+  </script>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm_theme_tasman.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
