--- a/html/map.html
+++ b/html/map.html
@@ -29,10 +29,10 @@
   </style>
   </head>
   <body class="container">
-    <header class="mid">
-      <h2>Apexエリア統計画像</h2>
+    <header>
+      <h1>Apexエリア統計画像</h1>
     </header>
-    <h3>シーズン8スプリット2の第5収縮統計画像</h3>
+    <h2>シーズン8スプリット2の第5収縮統計画像</h2>
     <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/latest.jpg" alt="統計画像">
     <div class="color-desc">
       <div class="color-desc-elm" style="background-color: #f6ecec">~20%</div>
@@ -42,7 +42,7 @@
       <div class="color-desc-elm" style="background-color: #f65c59">81~100%</div>
     </div>
     <p>機械的に集計しているので、誤検出、未検出が発生している可能性があります</p>
-    <h3 class="mid">集計方法</h3>
+    <h2>集計方法</h3>
     <p>第5ラウンドのマップのスクリーンショットを、#apex_mapとハッシュタグをつけてtwitterに投稿することで集計に参加することができます。</p>
     <p>1,920×1,080の画像のみ受け付けます。</p>
   </body>
