--- a/html/result.html
+++ b/html/result.html
@@ -3,70 +3,52 @@
 <head>
   {{ template "google" }}
   {{ template "meta" }}
-  <title>Apex Legendsポイント逆引き計算</title>
+  <title>Apexツール置き場</title>
   <style>
-    header {
-      display: flex;
-      justify-content: center;
-      border-bottom: 1px solid;
-      width: 100%;
-    }
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-    .left-align {
-      width: 80%;
-      display: flex;
-      justify-content: flex-start;
-    }
-    .result {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-    .center {
-      display: flex;
-      justify-content: center;
-    }
-    div {
-      width: 100%;
-    }
-    .cand-table {
-      display: table;
-      text-align: center;
-      width: 80%;
-    }
-    .table-title {
-      border-bottom: solid 1px;
-    }
+  #cand-table {
+    display: flex;
+    justify-content: center;
+  }
+  #cand-table>table {
+    width: 100%;
+  }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Apex逆引き計算</h1>
-  </header>
- <div>
-  <p>ランクマッチであるポイントを得るために必要な順位とキル数をクラス別に計算するサイトです。</p>
-  <form action="/calc" method="POST">
-    <p>I need <input type="number" name="point" placeholder="ポイントを入力してください"></p>
-    <input type="submit">
-  </form>
- </div>
- <hr>
- <div class="result">
-  <div class="center">
-    <h2>必要順位&キル数</h2>
+  {{ template "title" }}
+  <div class="section container">
+    <p class="title is-1">RP逆引き計算</p>
+    <hr>
+    <div class="content">
+      <p>ランクマッチであるポイントを得るために必要な順位とキル数をクラス別に計算するサイトです。</p>
+    </div>
+    <div>
+      <form action="/calc" method="POST">
+        <div class="field">
+          <label for="point" class="label">必要RP</label>
+          <div class="control">
+            <input class="input" type="number" name="point" placeholder="ポイントを入力してください">
+          </div>
+        </div>   
+        <div class="field">
+          <div class="control">
+            <button class="button">計算</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
-  <p class="center">{{ .Point }}ポイントを取得するためには</p>
+ <hr>
+ <div class="section container">
+  <p class="title is-2">必要順位&キル数</p>
+  <div class="content">
+    <p>{{ .Point }}ポイントを取得するためには</p>
+  </div>
   {{ range $result := .Table }}
     <div>
-      <h3 class="center table-title">{{ $result.Class }}</h3>
-      <div class="center">
-        <table class="cand-table">
+      <p class="title is-3">{{ $result.Class }}</p>
+      <div id="cand-table">
+        <table class="table">
           <thead>
             <tr>
               <th>順位</th>
