銃ページの追加

--- a/html/_title.html
+++ b/html/_title.html
@@ -2,7 +2,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-menu container">
     <div class="navbar-start">
-      <a href="" class="navbar-item">ホーム</a>
+      <a href="index" class="navbar-item">ホーム</a>
       <a href="map" class="navbar-item">マップ解析</a>
       <a href="calc" class="navbar-item">RP逆引き計算</a>
     </div>
