--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,9 @@
       <div class="box">
         <a href="calc">RP逆引き計算</a>
       </div>
+      <div class="box">
+        <a href="guns">銃情報</a>
+      </div>
     </div>
   </div>
 </body>
