--- a/html/map.html
+++ b/html/map.html
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
     background: linear-gradient(to right, #6e42ff,  #ff1463);
+    width: 677px;
   }
   </style>
 </head>
@@ -17,18 +18,32 @@
   <div class="section container">
     <p class="title is-1">Apexエリア統計画像</p>
     <hr>
-    <p class="title is-2">シーズン8スプリット2の第5収縮統計画像</p>
+    <p class="title is-2">シーズン</p>
+    <hr>
+    <ul>
+      <li><a href="#s9s1">シーズン9スプリット1</a></li>
+      <li><a href="#s8s2">シーズン8スプリット2</a></li>
+    </ul>
+    <hr>
+    <p class="title is-2" id="s9s1">シーズン9スプリット1</p>
     <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/latest.jpg" alt="統計画像">
     <div id="color-desc">
       <div class="left">低</div>
       <div class="right">高</div>
     </div>
-    <p>機械的に集計しているので、誤検出、未検出が発生している可能性があります</p>
+    <hr>
+    <p class="title is-2" id="s8s2">シーズン8スプリット2</p>
+    <img src="/static/s8s2.jpg" alt="統計画像">
+    <div id="color-desc">
+      <div class="left">低</div>
+      <div class="right">高</div>
+    </div>
   </div>
   <div class="section container">
     <p class="title is-2">集計方法</a>
     <p>第5ラウンドのマップのスクリーンショットを、#apex_mapとハッシュタグをつけてtwitterに投稿することで集計に参加することができます。</p>
     <p>1,920×1,080の画像のみ受け付けます。</p>
+    <p>機械的に集計しているので、誤検出、未検出が発生している可能性があります</p>
   </div>
 </body>
 </html>
