--- a/html/map.html
+++ b/html/map.html
@@ -10,6 +10,7 @@
     justify-content: space-between;
     background: linear-gradient(to right, #6e42ff,  #ff1463);
     width: 677px;
+    color: white;
   }
   </style>
 </head>
