--- a/html/map.html
+++ b/html/map.html
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     background: linear-gradient(to right, #6e42ff,  #ff1463);
-    width: 677px;
+    width: 50%;
     color: white;
   }
   </style>
@@ -27,7 +27,10 @@
     </ul>
     <hr>
     <p class="title is-2" id="s9s1">シーズン9スプリット1</p>
+    <p class="title is-3">安置リスト</p>
     <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/latest.jpg" alt="統計画像">
+    <p class="title is-3">エリア統計</p>
+    <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/area_latest.jpg" alt="統計画像">
     <div id="color-desc">
       <div class="left">低</div>
       <div class="right">高</div>
