mapページを編集

--- a/html/map.html
+++ b/html/map.html
@@ -22,15 +22,26 @@
     <p class="title is-2">シーズン</p>
     <hr>
     <ul>
+      <li><a href="#s9s2">シーズン9スプリット2</a></li>
       <li><a href="#s9s1">シーズン9スプリット1</a></li>
       <li><a href="#s8s2">シーズン8スプリット2</a></li>
     </ul>
     <hr>
-    <p class="title is-2" id="s9s1">シーズン9スプリット1</p>
+    <p class="title is-2" id="s9s2">シーズン9スプリット2</p>
     <p class="title is-3">安置リスト</p>
     <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/latest.jpg" alt="統計画像">
     <p class="title is-3">エリア統計</p>
     <img src="https://mapanalyze.s3-ap-northeast-1.amazonaws.com/area_latest.jpg" alt="統計画像">
+    <div id="color-desc">
+      <div class="left">低</div>
+      <div class="right">高</div>
+    </div>
+    <hr>
+    <p class="title is-2" id="s9s1">シーズン9スプリット1</p>
+    <p class="title is-3">安置リスト</p>
+    <img src="/static/s9s1.jpg" alt="統計画像">
+    <p class="title is-3">エリア統計</p>
+    <img src="/static/s9s1a.jpg" alt="統計画像">
     <div id="color-desc">
       <div class="left">低</div>
       <div class="right">高</div>
