--- a/html/_google.html
+++ b/html/_google.html
@@ -1,11 +1,11 @@
 {{ define "google" }}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JMSP61D9F1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG3DG7Z9W4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'G-JMSP61D9F1');
+  gtag('config', 'G-JG3DG7Z9W4');
 </script>
 {{ end }}
