タイトル修正/検出率の表示

--- a/html/calc.html
+++ b/html/calc.html
@@ -3,7 +3,7 @@
 <head>
   {{ template "google" }}
   {{ template "meta" }}
-  <title>Apexツール置き場</title>
+  <title>RP逆引き計算</title>
 </head>
 <body>
   {{ template "title" }}
