--- a/html/guns.html
+++ b/html/guns.html
@@ -3,7 +3,7 @@
 <head>
   {{ template "google" }}
   {{ template "meta" }}
-  <title>Apexツール置き場</title>
+  <title>銃情報</title>
   <style>
   #gunlist {
     display: flex;
