英語版を追加

--- a/html/_title.html
+++ b/html/_title.html
@@ -6,6 +6,15 @@
       <a href="map" class="navbar-item">マップ解析</a>
       <a href="calc" class="navbar-item">RP逆引き計算</a>
     </div>
+    <div class="navbar-end">
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link">lang</a>
+        <div class="navbar-dropdown">
+          <a class="navbar-item" href="index">ja</a>
+          <a class="navbar-item" href="index_en">en</a>
+        </div>
+      </div>
+    </div>
   </div>
 </nav>
 {{ end }}
