--- a/html/_google.html
+++ b/html/_google.html
@@ -1,11 +1,11 @@
 {{ define "google" }}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG3DG7Z9W4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8X5651Y9G2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JG3DG7Z9W4');
+  gtag('config', 'G-8X5651Y9G2');
 </script>
 {{ end }}
